--- a/src/Components/ExpandedBlock/ExpandedBlock.css
+++ b/src/Components/ExpandedBlock/ExpandedBlock.css
@@ -14,6 +14,7 @@
     background-color: rgba(0, 0, 0, 0.308);
     width: 100%;
     z-index: 4;
+    overflow: scroll;
 }
 
 .img {
@@ -23,4 +24,6 @@
     width: 60%;
     background-color: rgb(49, 49, 49);
     color: white;
+    max-width: 80%;
+    height: auto;
 }
