--- a/src/Components/ExpandedBlock/ExpandedBlock.css
+++ b/src/Components/ExpandedBlock/ExpandedBlock.css
@@ -2,7 +2,7 @@
 .bigBlock {
     position: relative;
     margin: 0 auto;
-    min-height: 650px;
+    height: 100vh;
     width: 60%;
     background-color: bisque;
     overflow: scroll;
