--- a/src/Components/BlockContainer/BlockContainer.css
+++ b/src/Components/BlockContainer/BlockContainer.css
@@ -1,8 +1,31 @@
 .blockContainer {
-    position: relative;;
+    position: relative;
     margin: 20px auto;
-    background-color: aquamarine;
+    background-color: rgb(224, 224, 224);
     padding: 15px;
-    width: 80%;
-    min-height: 750px;
+    width: 85%;
+    min-height: 500px;
+    border-radius: 10px;
+    display: flex;
 }
+
+.col {
+    flex: 33%;
+    max-width: 33%;
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 800px) {
+    .col {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .col {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
