--- a/src/Components/BlockContainer/BlockContainer.css
+++ b/src/Components/BlockContainer/BlockContainer.css
@@ -1,4 +1,4 @@
-.blockContainer {
+/*.blockContainer {
     position: relative;
     margin: 20px auto;
     background-color: rgb(224, 224, 224);
@@ -7,6 +7,11 @@
     min-height: 500px;
     border-radius: 10px;
     display: flex;
+}*/
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .col {
