--- a/src/Components/Comments/Comments.css
+++ b/src/Components/Comments/Comments.css
@@ -2,9 +2,12 @@
     border-left: solid 1px red;
     text-align: left;
     margin-left: 0.75rem;
+    padding: 5px 10px;
+    background-color: rgb(255, 255, 255);
 }
-
 .comments-container > .comment {
     margin-left: 1.25rem;
-    border-left: 1px purple solid;
+    border-left: 1px red solid;
+    margin: 2px;
+    border-radius: 10px;
 }
