--- a/src/Components/PreviewBlock/PreviewBlock.css
+++ b/src/Components/PreviewBlock/PreviewBlock.css
@@ -36,6 +36,9 @@
 .subreddit {
     text-align: right;
 }
+.subreddit:hover{
+    color: black;
+}
 .noImgTitle {
     white-space: wrap;
     overflow: hidden;
