improve accessability and SEO elements

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 
+:root {
+  --main-text-color: #EB0000;
+}
 .App {
   text-align: center;
 }
@@ -51,7 +54,7 @@
 }
 nav h1, nav h3{
   display: inline-block;
-  color: red;
+  color: var(--main-text-color);
 }
 nav h1 {
   margin-left: 20px;
@@ -60,7 +63,7 @@ nav h1 {
 }
 .reddit-logo {
   display: inline-block;
-  color: red;
+  color: var(--main-text-color);
   width: 40px;
   height: 40px;
   vertical-align: middle;
@@ -82,7 +85,7 @@ nav h1 {
 }
 
 .drop-down-content p:hover {
-  color: red;
+  color: var(--main-text-color);
 }
 
 .drop-down:hover .drop-down-content{
@@ -126,14 +129,14 @@ nav h1 {
   font-size: 16px;
   color: white;
   font-weight: 800;
-  background-color: red;
+  background-color: var(--main-text-color);
   margin: 0 5px;
   border-radius: 22.5px;
 }
 .topics-bar li:hover{
-  box-shadow: 0 0 5px red;
-  -webkit-box-shadow: 0 0 5px red;
-  -moz-box-shadow: 0 0 5px red;
+  box-shadow: 0 0 5px var(--main-text-color);
+  -webkit-box-shadow: 0 0 5px var(--main-text-color);
+  -moz-box-shadow: 0 0 5px var(--main-text-color);
 }
 
 /** Mobile Styling **/
@@ -151,7 +154,7 @@ nav h1 {
     margin: 0 20px;
   }
   .dropdown{
-    background-color: red;
+    background-color: var(--main-text-color);
     border-radius: 10px;
     color: white;
     list-style-type: none;
@@ -179,7 +182,7 @@ nav h1 {
     transition-delay: 0s, 0s, 0.3s;
   }
   .mobile-menu-list {
-    color: red;
+    color: var(--main-text-color);
     width: 20px;
     height: 20px;
     vertical-align: bottom;
