--- a/src/Components/PreviewBlock/PreviewBlock.css
+++ b/src/Components/PreviewBlock/PreviewBlock.css
@@ -71,7 +71,7 @@
 }
 .post-info h3{
     margin-left: 10px;
-    color: red;
+    color: var(--main-text-color);
     font-size: 14px;
     display: inline-block;
     text-transform: lowercase;
