--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -5,7 +5,7 @@ button {
     display: inline-block;
 }
 button:hover{
-    color: red;
+    color: var(--main-text-color);
 }
 form{
     background-color: rgba(201, 200, 200, 0.205);
@@ -18,7 +18,7 @@ form{
     padding: 0 15px;
 }
 form:active{
-    border: red;
+    border: var(--main-text-color);
 }
 form *{
     background-color: rgba(201, 200, 200, 0);
